--- a/index.html
+++ b/index.html
@@ -42,10 +42,6 @@
         <img border="0" width="90" src="https://github.com/images/modules/download/tar.png"></a>
     </div>
 
-    <div class="sample">
-      <a href="./slider.html">Sample</a>
-    </div>
-
     <h1><a href="https://github.com/yutaro-ihara/slider-without-html5-range">slider-without-html5-range</a>
       <span class="small">by <a href="https://github.com/yutaro-ihara">yutaro-ihara</a></span></h1>
 
@@ -56,19 +52,15 @@
 
 
 
+    <h2>Sample</h2>
+    <a href="./slider.html">Sample</a>
+
+    <h2>Authors</h2>
+    <p>Yutaro IHARA (buimasa1019@gmail.com)<br/>      </p>
 
 
-
-
-
-
-      <h2>Authors</h2>
-      <p>Yutaro IHARA (buimasa1019@gmail.com)<br/>      </p>
-
-
-
-      <h2>Contact</h2>
-      <p> (buimasa1019@gmail.com)<br/>      </p>
+    <h2>Contact</h2>
+    <p> (buimasa1019@gmail.com)<br/>      </p>
 
 
     <h2>Download</h2>
