--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
 
 
 
-    <h2>Sample</h2>
-    <a href="./slider.html">Sample</a>
+    <h2>Demo</h2>
+    <a href="./slider.html">Demo</a>
 
     <h2>Authors</h2>
     <p>Yutaro IHARA (buimasa1019@gmail.com)<br/>      </p>
