--- a/slider.html
+++ b/slider.html
@@ -26,13 +26,16 @@ float:left;
 
 .slider2{height: 10em}
 .slider2:before {
-border-bottom: 9em white solid;
-border-right: 14em white solid;
+border-bottom: 1px gray solid;
+border-right: 1px gray solid;
 border-bottom-right-radius: 173px;
 content: "";
 position: absolute;
-margin-left: -9px;
-margin-top: -12px;
+margin-left: 0px;
+margin-top: 0px;
+background-color: white;
+height: 8em;
+width: 17%;
 }
 
 * {
